# floo

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
packaging/: README.md
packaging/aur/: .SRCINFO  PKGBUILD
packaging/homebrew/: floo.rb
python/src/floo/: __main__.py  agent_setup.py  cli.py  paths.py  registry.py  scanner.py
rust/: Cargo.toml  README.md
rust/src/: agent_setup.rs  main.rs  paths.rs  registry.rs  scanner.rs
rust/tests/: cli.rs
src/floo/: agent_setup.py  cli.py  registry.py
tests/: test_registry.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: agent_setup.ts  cli.ts  index.ts  paths.ts  registry.ts  scanner.ts
