[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floo"
version = "0.0.1"
description = "Sticky port assignments for parallel coding-agent dev servers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "James" }]
keywords = ["cli", "ports", "dev-server", "claude-code", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
dependencies = []

[project.scripts]
floo = "floo.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/floo"]
