[package]
name = "floo-ports"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Sticky port assignments for parallel coding-agent dev servers."
authors = ["Alberto Le Baron Velazco <jimmleb178@gmail.com>"]
repository = "https://gitlab.com/ajlebaron/floo"
homepage = "https://gitlab.com/ajlebaron/floo"
readme = "README.md"
keywords = ["port", "dev-server", "cli", "developer-tools", "sqlite"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "floo"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
